--- a/Frontend/getahotel/package.json
+++ b/Frontend/getahotel/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0"
