OAUTH 2 Agregada + Controlador de SavedLocations

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DARWIN\\SQLEXPRESS;Database=GetAHotel;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
-  "AllowedHosts": "*"
+  "JwtSettings": {
+    "Key": "TuClaveSuperSecretaAqui123!skswhj",
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers",
+    "ExpirationMinutes": 60
+  }
 }
